@@ -48,7 +48,7 @@
             /* some useful variables */
             $this->assign('REQUEST_URI', $_SERVER['REQUEST_URI']);
             $this->assign('SOFTWARE_NAME', 'PostfixSQLAdmin');
-            $this->assign('SOFTWARE_VERSION', 'alpha0.2');
+            $this->assign('SOFTWARE_VERSION', 'alpha0.3');
             $this->assign('CFG_SKIN', CFG_SKIN);
 
             if ( defined('CFG_LOGO') )
